[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "path-manager-qiaoy"
version = "3.0.0"
description = "Unified project directory helper with auto‑detection."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  {name = "Qiaoyi", email = "qiaoy@buaa.edu.cn"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/qiaoyi/path_manager"

[tool.setuptools]
packages = ["path_manager_qiaoy"]

[project.scripts]
proj = "path_manager_qiaoy.cli:main"